Bug 477456 - Qt6 ark can't open archives via cli
Summary: Qt6 ark can't open archives via cli
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-24 10:17 UTC by daron439
Modified: 2023-11-24 15:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2023-11-24 10:17:31 UTC
SUMMARY
Qt6 ark can't open archives via cli, opening them though dolphin works fine. Qt5 build also opens them via cli successfully.


STEPS TO REPRODUCE
1. build ark with -DBUILD_WITH_QT6=TRUE
2. create a simple archive:
echo "test" > 123.txt && tar czvf qt6ark.tar.gz 123.txt
3. open it:
ark qt6ark.tar.gz


OBSERVED RESULT
Loading the archive ‘/tmp/arkpartbEHolP’ failed with the following error:
No suitable plugin found. Ark does not seem to support this file type.


EXPECTED RESULT
Ark opens the archive with no problems, just as it does when clicking in dolphin or using the Qt5 build.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Comment 1 Bug Janitor Service 2023-11-24 11:39:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/214
Comment 2 Nicolas Fella 2023-11-24 15:32:44 UTC
Git commit d11f006f35126f5a09868df442595f8e42611cb5 by Nicolas Fella.
Committed on 24/11/2023 at 12:38.
Pushed by aacid into branch 'master'.

Add working dir to QUrl::fromUserInput calls

Otherwise a relative URL won't be resolved properly

M  +1    -1    app/batchextract.cpp
M  +9    -8    app/main.cpp
M  +1    -1    kerfuffle/jobs.cpp
M  +2    -2    part/part.cpp

https://invent.kde.org/utilities/ark/-/commit/d11f006f35126f5a09868df442595f8e42611cb5