Add working dir to QUrl::fromUserInput calls

Otherwise a relative URL won't be resolved properly

BUG: 477456